内存分配策略：（总结）针对不同年龄段的对象分配原则如下所示：